fixed fa icon and text alignment in address area

--- a/assets/sass/_sections.scss
+++ b/assets/sass/_sections.scss
@@ -662,6 +662,7 @@
 			display: block;
     		padding-left: 45px;
     		font-style:  italic;
+    		line-height: 2;
 		}
 		.fa-inverse {
 			font-size: 12px;
